[project]
name = "utils"
version = "1.0.3"
description = "Reusable infrastructure utilities (database connectors, Google Sheets, etc.)"
requires-python = ">=3.10"
dependencies = [
    "azure-core>=1.35.1",
    "azure-identity>=1.25.1",
    "mssql-python>=1.1.0",
    "mysql-connector",
    "sshtunnel>=0.4.0",
    "paramiko==3.5.1",
    "pygsheets>=2.0.6",
    "pandas>=2.1.4",
    "numpy>=1.26.4",
    "python-dotenv",
    "sqlalchemy>=2.0",
    # bump-my-version removed - dev tool only
]

[dependency-groups]
dev = [
    "bump-my-version>=1.2.7",
]

[tool.bumpversion]
current_version = "1.0.3"
commit = true
tag = true
push = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[project.optional-dependencies]
snowflake = [
    "snowflake-connector-python>=3.0",
    "snowflake-connector-python[pandas]>=3.0",
    "cryptography>=41.0",
    "sqlparse>=0.5.0",
]
bigquery = [
    "google-cloud-bigquery>=3.0",
    "google-cloud-bigquery-storage>=2.0",
    "pyarrow>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
